<resources>
    <string name="app_name">Phones UkrAVTO</string>
    <string name="main_activity_name">Welcome to UkrAVTO</string>
    <string name="select_activity_name">Organizations UkrAVTO</string>
    <string name="settings_activity_name">Settings sync phones</string>
    <string name="enter_your_corporate_email">Enter your corporate email:</string>
    <string name="custom_account">UrkAVTO</string>
    <string name="ACCOUNT_TYPE">ua.in.ukravto.kb</string>
    <string name="text_login">Sign In</string>
    <string name="select_none">Select none</string>
    <string name="select_all">Select ALL</string>
    <string name="summary_select_organization_for_sync">Setting selected organizations for sync</string>
    <string name="title_pref_organization">Settings organization</string>
    <string name="action_search">search_organization</string>
    <string name="search_hint">Search organization</string>
    <string name="fail_connect_to_server">Fail connect to server! Please try again later.</string>
    <string name="check_internet_connection">Check internet connection!</string>
    <string name="check_update_now">Check update now</string>
    <string name="text_app_is_latest">Your version of the app is the latest! Please, try again later.</string>
    <string name="dowload_new_version_app">A new version of the app is available. Download it?</string>
    <string name="channel_name">Update app</string>
    <string name="channel_description">Update app Phones UkrAVTO</string>
    <string name="text_send_request">Send request...</string>
    <string name="perm_is_req">This permission is required for the correct operation of the application!</string>
    <string name="text_retry">Retry</string>
    <string name="title_notif_download">Download \'Phones UkrAVTO\'</string>
    <string name="text_notif_download">Download in progress</string>
    <string name="error_email_is_empty">Email is empty!</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="title_new_version_app">New version \'Phones UkrAVTO\'</string>
    <string name="text_new_version_app">Available new version UkrAVTO app. Tap to download now ;)</string>
    <string name="big_text_new_version_change_log">Add russian language and fix bugs</string>
    <string name="text_download_fail">Download fail</string>
    <string name="select_sync_orginozations">Select sync orginozations</string>
    <string name="sync_only_new_update_phones">Sync only new update phones</string>
    <string name="automatically_check_for_updates">Automatically check for updates</string>
    <string name="sync_with_phone_number_only">Sync contacts with phone number only</string>
    <string name="get_data_organizations">I will get data on organizations…</string>
    <string name="sync_now">Sync now</string>
    <string name="title_pref_ukr_avto">UkrAVTO Preferences</string>
    <string name="add_new_organization">Add new organizations</string>
    <string name="delete_organization">Delete organizations</string>
    <string name="sync_successful">Sync successful!</string>
</resources>
